adding the new domain

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,4 @@
 <script>
   // Redirect to index.html for React Router
-  window.location.replace("/affirmationspower/");
+  window.location.replace("/");
 </script>
