--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
       content="Transform your career journey with positive affirmations"
     />
     <link rel="apple-touch-icon" href="GuardienceLogo.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
